--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+        <img src="./images/logo_place_header.svg" class=" logo_place_header" alt="Логотоп яндекс практикум">
+        <h1 class="hader__title">Научиться<br> учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы<br> к обучению вы можете использовать в своей<br> жизни?
+           <a href="#" class="header__link"> Узнать →</a>
+        </p>
+        <img src="./images/header-image.png" class="header__main-illustration" alt="Изображена картина опять двойка">
+        <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="tow-columns">
+          <h4 class="two-columns__brief">Главные проблемы<br> в обучении</h4>
+          <div class="tow-columns__main-text">
+             <div class="tow-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы<br> готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,<br> чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка<br> быстро выветривается и не приносит пользы.</div>
+             <div class="tow-columns__paragraph"><span class="tow-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
+             <div class="tow-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его<br> эффективным и захватывающим. Эти же техники применяются на примере обучения в<br> Практикуме.</div>   
+          </div>
+        </div>
       </section>
 
       <section class="digits">
