--- a/index.html
+++ b/index.html
@@ -31,6 +31,52 @@
       </section>
 
       <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h4 class="section-subtitle">Про учёбу и мозг</h4>
+
+        <div class="table">
+          <article class="table__cell">
+            <h6 class="table__heading">86 миллиардов</h6>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </article>
+
+          <article class="table__cell">
+            <h6 class="table__heading">2.1 миллиарда</h6>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_margin-top">Всемирный Банк, 2017</p>
+          </article>
+          
+          <article class="table__cell">
+            <h6 class="table__heading">1000 терабайт</h6>
+            <p class="table__text">Объём памяти человека</p>
+          </article>
+
+          <article class="table__cell">
+            <h6 class="table__heading">500 триллионов</h6>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </article>
+
+          <article class="table__cell">
+            <h6 class="table__heading">420 миллионов</h6>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_margin-top">Всемирный Банк, 2017</p>
+          </article>
+
+          <article class="table__cell">
+            <h6 class="table__heading">17–20 лет</h6>
+            <p class="table__text">Пик обучаемости</p>
+          </article>
+
+          <article class="table__cell">
+            <h6 class="table__heading">1885 год</h6>
+            <p class="table__text">Открытие кривой забывания</p>
+          </article>
+
+          <article class="table__cell">
+            <h6 class="table__heading">1889 год</h6>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </article>
+        </div>
       </section>
 
       <section class="feynman">
