готов 5 блок kaufman

--- a/index.html
+++ b/index.html
@@ -86,6 +86,61 @@
       </section>
 
       <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h4 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h4>
+        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" alt="треуголиник">
+
+        <div class="table table_theme_dark">
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">1</h6>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </article>
+
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">2</h6>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </article>
+
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">3</h6>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </article>
+
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">4</h6>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </article>
+
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">5</h6>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </article>
+
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">6</h6>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </article>
+
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">7</h6>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </article>
+
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">8</h6>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </article>
+
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">9</h6>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </article>
+
+          <article class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">10</h6>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </article>
+        </div>
       </section>
     </main>
     <footer class="footer">
