--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-        <img src="./images/logo_place_header.svg" class=" logo_place_header" alt="Логотоп яндекс практикум">
+        <img src="./images/logo_place_header.svg" class="logo_place_header" alt="Логотоп яндекс практикум">
         <h1 class="hader__title">Научиться<br> учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы<br> к обучению вы можете использовать в своей<br> жизни?
            <a href="#" class="header__link"> Узнать →</a>
@@ -144,7 +144,34 @@
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__columns_copyright">
+          <img src="./images/logo_place_footer.svg" class="logo_place_footer" alt="Логотоп яндекс практикум">
+          <p class="footer__author">Ⓒ 2022ю Артём Калинкин</p>
+        </div>
+        <div class="footer__columns_info">
+          <h6 class="footer__column-heading">О Практикуме</h6>
+            <div class="footer__column-links">
+              <a href="#" class="footer_column-link">Главная</a>
+              <a href="#" class="footer_column-link">Концепция</a>
+              <a href="#" class="footer_column-link">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__columns_social">
+          <h6 class="footer__column-heading">Соцсети</h6>
+          <div class="footer__column-links">
+            <a href="#" class="footer_column-link">
+              <img src="./images/facebook_color_white.svg" class="footer_social-icon" alt="иконка фейсбук">Facebook
+            </a>
+            <a href="#" class="footer_column-link">
+              <img src="./images/vk_color_white.svg" class="footer_social-icon" alt="иконка ВКонтакте">ВКонтакте
+            </a>
+            <a href="#" class="footer_column-link">
+              <img src="./images/instagram_color_white.svg" class="footer_social-icon" alt="иконка Инстагоам">Instagram
+            </a>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
