--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class="footer__columns">
         <div class="footer__columns_copyright">
           <img src="./images/logo_place_footer.svg" class="logo_place_footer" alt="Логотоп яндекс практикум">
-          <p class="footer__author">Ⓒ 2022ю Артём Калинкин</p>
+          <p class="footer__author">Ⓒ 2022. Артём Калинкин</p>
         </div>
         <div class="footer__columns_info">
           <h6 class="footer__column-heading">О Практикуме</h6>
