--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page">
     <header class="header">
         <img src="./images/logo_place_header.svg" class="logo_place_header" alt="Логотоп яндекс практикум">
-        <h1 class="hader__title">Научиться<br> учиться</h1>
+        <h1 class="hader__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы<br> к обучению вы можете использовать в своей<br> жизни?
            <a href="#" class="header__link"> Узнать →</a>
         </p>
