--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <img src="./images/logo_place_header.svg" class="logo_place_header" alt="Логотоп яндекс практикум">
         <h1 class="hader__title">Научиться учиться</h1>
-        <p class="header__subtitle">Какие современные и эффективные подходы<br> к обучению вы можете использовать в своей<br> жизни?
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
            <a href="#" class="header__link"> Узнать →</a>
         </p>
         <img src="./images/header-image.png" class="header__main-illustration" alt="Изображена картина опять двойка">
@@ -23,9 +23,9 @@
         <div class="tow-columns">
           <h4 class="two-columns__brief">Главные проблемы<br> в обучении</h4>
           <div class="tow-columns__main-text">
-             <div class="tow-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы<br> готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,<br> чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка<br> быстро выветривается и не приносит пользы.</div>
+             <div class="tow-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
              <div class="tow-columns__paragraph"><span class="tow-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
-             <div class="tow-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его<br> эффективным и захватывающим. Эти же техники применяются на примере обучения в<br> Практикуме.</div>   
+             <div class="tow-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>   
           </div>
         </div>
       </section>
