--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="content">
       <section class="description">
         <div class="tow-columns">
-          <h4 class="two-columns__brief">Главные проблемы<br> в обучении</h4>
+          <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
           <div class="tow-columns__main-text">
              <div class="tow-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
              <div class="tow-columns__paragraph"><span class="tow-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
