--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="page">
     <header class="header">
-        <img src="./images/logo_place_header.svg" class="logo_place_header" alt="Логотоп яндекс практикум">
-        <h1 class="hader__title">Научиться учиться</h1>
+        <img src="./images/logo_place_header.svg" class="header__logo_place_header" alt="Логотоп яндекс практикум">
+        <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
            <a href="#" class="header__link"> Узнать →</a>
         </p>
@@ -20,60 +20,60 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="tow-columns">
-          <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="tow-columns__main-text">
-             <div class="tow-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
-             <div class="tow-columns__paragraph"><span class="tow-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
-             <div class="tow-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>   
+             <p class="tow-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+             <p class="tow-columns__paragraph"><span class="tow-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+             <p class="tow-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>   
           </div>
         </div>
       </section>
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <h4 class="section-subtitle">Про учёбу и мозг</h4>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
 
         <div class="table">
           <article class="table__cell">
-            <h6 class="table__heading">86 миллиардов</h6>
+            <h4 class="table__heading">86 миллиардов</h4>
             <p class="table__text">Число нейронов в мозге человека</p>
           </article>
 
           <article class="table__cell">
-            <h6 class="table__heading">2.1 миллиарда</h6>
+            <h4 class="table__heading">2.1 миллиарда</h4>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_margin-top">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </article>
           
           <article class="table__cell">
-            <h6 class="table__heading">1000 терабайт</h6>
+            <h4 class="table__heading">1000 терабайт</h4>
             <p class="table__text">Объём памяти человека</p>
           </article>
 
           <article class="table__cell">
-            <h6 class="table__heading">500 триллионов</h6>
+            <h4 class="table__heading">500 триллионов</h4>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </article>
 
           <article class="table__cell">
-            <h6 class="table__heading">420 миллионов</h6>
+            <h4 class="table__heading">420 миллионов</h4>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_margin-top">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </article>
 
           <article class="table__cell">
-            <h6 class="table__heading">17–20 лет</h6>
+            <h4 class="table__heading">17–20 лет</h4>
             <p class="table__text">Пик обучаемости</p>
           </article>
 
           <article class="table__cell">
-            <h6 class="table__heading">1885 год</h6>
+            <h4 class="table__heading">1885 год</h4>
             <p class="table__text">Открытие кривой забывания</p>
           </article>
 
           <article class="table__cell">
-            <h6 class="table__heading">1889 год</h6>
+            <h4 class="table__heading">1889 год</h4>
             <p class="table__text">Открытие условного рефлекса</p>
           </article>
         </div>
@@ -87,57 +87,57 @@
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h4 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h4>
-        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" alt="треуголиник">
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="kaufman__triangle"></div>
 
         <div class="table table_theme_dark">
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">1</h6>
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </article>
 
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">2</h6>
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </article>
 
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">3</h6>
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </article>
 
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">4</h6>
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </article>
 
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">5</h6>
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </article>
 
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">6</h6>
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </article>
 
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">7</h6>
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </article>
 
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">8</h6>
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </article>
 
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">9</h6>
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </article>
 
           <article class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">10</h6>
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </article>
         </div>
@@ -145,29 +145,29 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns_copyright">
-          <img src="./images/logo_place_footer.svg" class="logo_place_footer" alt="Логотоп яндекс практикум">
+        <div class="footer__columns_content_copyright">
+          <img src="./images/logo_place_footer.svg" class="footer__logo_place_footer" alt="Логотоп яндекс практикум">
           <p class="footer__author">Ⓒ 2022. Артём Калинкин</p>
         </div>
-        <div class="footer__columns_info">
-          <h6 class="footer__column-heading">О Практикуме</h6>
-            <div class="footer__column-links">
-              <a href="#" class="footer_column-link">Главная</a>
-              <a href="#" class="footer_column-link">Концепция</a>
-              <a href="#" class="footer_column-link">Наставники</a>
-          </div>
+        <div class="footer__columns_content_info">
+          <h4 class="footer__column-heading">О Практикуме</h4>
+            <nav class="footer__column-links">
+              <a href="#" class="footer__column-link">Главная</a>
+              <a href="#" class="footer__column-link">Концепция</a>
+              <a href="#" class="footer__column-link">Наставники</a>
+            </nav>
         </div>
-        <div class="footer__columns_social">
-          <h6 class="footer__column-heading">Соцсети</h6>
+        <div class="footer__columns_content_social">
+          <h4 class="footer__column-heading">Соцсети</h4>
           <div class="footer__column-links">
-            <a href="#" class="footer_column-link">
-              <img src="./images/facebook_color_white.svg" class="footer_social-icon" alt="иконка фейсбук">Facebook
+            <a href="#" class="footer__column-link">
+              <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="иконка фейсбук">Facebook
             </a>
-            <a href="#" class="footer_column-link">
-              <img src="./images/vk_color_white.svg" class="footer_social-icon" alt="иконка ВКонтакте">ВКонтакте
+            <a href="#" class="footer__column-link">
+              <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="иконка ВКонтакте">ВКонтакте
             </a>
-            <a href="#" class="footer_column-link">
-              <img src="./images/instagram_color_white.svg" class="footer_social-icon" alt="иконка Инстагоам">Instagram
+            <a href="#" class="footer__column-link">
+              <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="иконка Инстагоам">Instagram
             </a>
           </div>
         </div>
