--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-        <img src="./images/logo_place_header.svg" class="header__logo_place_header" alt="Логотоп яндекс практикум">
+        <img src="./images/logo_place_header.svg" class="logo logo_place_header" alt="Логотоп яндекс практикум">
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
            <a href="#" class="header__link"> Узнать →</a>
@@ -22,10 +22,10 @@
       <section class="description">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-          <div class="tow-columns__main-text">
-             <p class="tow-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-             <p class="tow-columns__paragraph"><span class="tow-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-             <p class="tow-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>   
+          <div class="two-columns__main-text">
+             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>   
           </div>
         </div>
       </section>
@@ -145,11 +145,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns_content_copyright">
-          <img src="./images/logo_place_footer.svg" class="footer__logo_place_footer" alt="Логотоп яндекс практикум">
+        <div class="footer__column footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" class="logo logo_place_footer" alt="Логотоп яндекс практикум">
           <p class="footer__author">Ⓒ 2022. Артём Калинкин</p>
         </div>
-        <div class="footer__columns_content_info">
+        <div class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
             <nav class="footer__column-links">
               <a href="#" class="footer__column-link">Главная</a>
@@ -157,7 +157,7 @@
               <a href="#" class="footer__column-link">Наставники</a>
             </nav>
         </div>
-        <div class="footer__columns_content_social">
+        <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <div class="footer__column-links">
             <a href="#" class="footer__column-link">
