вторй Спринт подготовил струкруру БЭМ и gthtlcnfdbk и переставил блок фейман

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
+  <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 </head>
 <body>
   <div class="page">
@@ -28,6 +28,12 @@
              <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>   
           </div>
         </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
       <section class="digits">
@@ -77,12 +83,6 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </article>
         </div>
-      </section>
-
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
       <section class="kaufman">
