--- a/index.html
+++ b/index.html
@@ -30,6 +30,45 @@
         </div>
       </section>
 
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+
+        <div class="cards">
+
+          <article class="cards__cell">
+            <img src="./images_sprint-2/cards-attention.png" alt="книга" class="cards__image">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания <br> возникают, если<br> чередовать сфокусированное и рассеянное мышление.</p>
+          </article>
+
+          <article class="cards__cell">
+            <img src="./images_sprint-2/cards-recall.png" alt="Статуя" class="cards__image">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </article>
+
+          <article class="cards__cell">
+            <img src="./images_sprint-2/cards-interliving.png" alt="абстракция" class="cards__image">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </article>
+
+          <article class="cards__cell">
+            <img src="./images_sprint-2/cards-question.png" alt="пустая комната" class="cards__image">
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </article>
+
+          <article class="cards__cell">
+            <img src="./images_sprint-2/cards-competence.png" alt="стопка книг" class="cards__image">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </article>
+
+        </div>
+      </section>
+
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
