--- a/index.html
+++ b/index.html
@@ -85,7 +85,16 @@
           </div>
 
         </div>
+      </section>
 
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+               
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
@@ -141,6 +150,20 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </article>
         </div>
+      </section>
+
+      <section class="khan">
+        <div class="khan__container">
+          <h2 class="khan__author">Салман Хан</h2>
+          <h3 class="khan__title">Весь мир — школа</h3> 
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
+          <h3 class="khan__quote-author-subline">Кинорежиссер, продюсер</h3>
+          <div class="khan__book-container">
+            <img src="./images_sprint-2/khan-book.jpg"class="khan__book-pic" alt="обложка книги" >
+            <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
+          </div>
+        </div> 
       </section>
 
       <section class="kaufman">
