reate all blocks

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
   <link rel="stylesheet" href="./pages/index.css">
-  <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 </head>
 <body>
   <div class="page">
@@ -160,7 +159,7 @@
           <h3 class="khan__quote-author">Джордж Лукас</h3>
           <h3 class="khan__quote-author-subline">Кинорежиссер, продюсер</h3>
           <div class="khan__book-container">
-            <img src="./images_sprint-2/khan-book.jpg"class="khan__book-pic" alt="обложка книги" >
+            <img src="./images_sprint-2/khan-book.jpg" class="khan__book-pic" alt="обложка книги" >
             <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
           </div>
         </div> 
@@ -221,6 +220,17 @@
             <h4 class="table__heading table__heading_theme_dark">10</h4>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </article>
+        </div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+          <img src="./images_sprint-2/logo/resources-arzamas.svg" alt="logo" class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-n1.svg" alt="logo" class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-strelka.svg" alt="logo" class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-polka.svg" alt="logo" class="resources__logo">
         </div>
       </section>
     </main>
