--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <article class="cards__cell">
             <img src="./images_sprint-2/cards-attention.png" alt="книга" class="cards__image">
             <h4 class="cards__title">Два вида внимания</h4>
-            <p class="cards__description">Глубокие знания <br> возникают, если<br> чередовать сфокусированное и рассеянное мышление.</p>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </article>
 
           <article class="cards__cell">
@@ -223,10 +223,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
-          <img src="./images_sprint-2/logo/resources-arzamas.svg" alt="logo" class="resources__logo">
-          <img src="./images_sprint-2/logo/resources-n1.svg" alt="logo" class="resources__logo">
-          <img src="./images_sprint-2/logo/resources-strelka.svg" alt="logo" class="resources__logo">
-          <img src="./images_sprint-2/logo/resources-polka.svg" alt="logo" class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-arzamas.svg" alt="Логотип" class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-n1.svg" alt="Логотип" class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-strelka.svg" alt="Логотип" class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-polka.svg" alt="Логотип" class="resources__logo">
         </div>
       </section>
     </main>
