--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <img src="./images/logo_place_footer.svg" class="logo logo_place_footer" alt="Логотоп яндекс практикум">
           <p class="footer__author">&#169; 2022. Артём Калинкин</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <div class="footer__column">
           <h4 class="footer__column-heading">О Практикуме</h4>
             <nav class="footer__column-links">
               <a href="#" class="footer__column-link">Главная</a>
@@ -246,7 +246,7 @@
               <a href="#" class="footer__column-link">Наставники</a>
             </nav>
         </div>
-        <div class="footer__column footer__column_content_social">
+        <div class="footer__column">
           <h4 class="footer__column-heading">Соцсети</h4>
           <div class="footer__column-links">
             <a href="#" class="footer__column-link">
